feat: implement SQL file reading functionality

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
           <compilerArgs>
             <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
           </compilerArgs>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
 
