--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release SQLift
+name: Build and Release
 
 on:
   push:
@@ -23,11 +23,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup GraalVM
+      - name: Set up GraalVM
         uses: graalvm/setup-graalvm@v1
         with:
           version: 'latest'
-          java-version: '17'
+          java-version: '17'  # GraalVM necesita Java 17+
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -37,12 +37,14 @@ jobs:
       - name: Build Native Image
         run: |
           native-image --no-fallback \
-                      --static \
-                      -H:+ReportExceptionStackTraces \
-                      -jar target/sqlift.jar \
-                      -o ${{ matrix.output_name }}
+            --static \
+            -H:+ReportExceptionStackTraces \
+            -H:Name=${{ matrix.output_name }} \
+            --initialize-at-build-time=cl.playground.cli.CommandLineApp \
+            -cp target/sqlift.jar:target/lib/* \
+            cl.playground.cli.CommandLineApp
 
-      - name: Upload Binary
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.output_name }}
@@ -52,18 +54,15 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download Artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v3
 
       - name: Create Release
-        id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             sqlift-linux-x64/sqlift-linux-x64
             sqlift-macos-x64/sqlift-macos-x64
             sqlift-windows-x64.exe/sqlift-windows-x64.exe
-          draft: false
-          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
