Fix Windows artifact handling

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           - os: macos-latest
             output_name: sqlift-macos-x64
           - os: windows-latest
-            output_name: sqlift-windows-x64.exe
+            output_name: sqlift-windows-x64
 
     steps:
       - uses: actions/checkout@v3
@@ -58,17 +58,32 @@ jobs:
 
       - name: Build Native Image (Windows)
         if: runner.os == 'Windows'
-        shell: cmd
+        shell: powershell
         run: |
-          native-image --no-fallback ^
-            -H:+ReportExceptionStackTraces ^
-            -H:Name=${{ matrix.output_name }} ^
-            --initialize-at-build-time=cl.playground.cli.CommandLineApp ^
-            --initialize-at-build-time=picocli ^
-            -cp target/sqlift.jar;target/lib/* ^
+          native-image `
+            --no-fallback `
+            -H:+ReportExceptionStackTraces `
+            -H:Name=sqlift-windows-x64 `
+            --initialize-at-build-time=cl.playground.cli.CommandLineApp `
+            --initialize-at-build-time=picocli `
+            "-cp" "target/sqlift.jar;target/lib/*" `
             cl.playground.cli.CommandLineApp
 
-      - name: Upload artifact
+      - name: List Generated Files
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: |
+          Get-ChildItem -Path .
+
+      - name: Upload artifact (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/upload-artifact@v3
+        with:
+          name: sqlift-windows-x64.exe
+          path: sqlift-windows-x64.exe
+
+      - name: Upload artifact (Linux/MacOS)
+        if: runner.os != 'Windows'
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.output_name }}
@@ -80,6 +95,9 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
+
+      - name: List Downloaded Artifacts
+        run: ls -R
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
