--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
           - os: macos-latest
             output_name: sqlift-macos-x64
+            arch: x64
+          - os: macos-latest
+            output_name: sqlift-macos-arm64
+            arch: arm64
           - os: windows-latest
             output_name: sqlift-windows-x64
 
@@ -54,6 +57,8 @@ jobs:
             --initialize-at-build-time=cl.playground.cli.CommandLineApp \
             --initialize-at-build-time=picocli \
             -cp target/sqlift.jar:target/lib/* \
+            --native-image-info \
+            -march=${{ matrix.arch }} \
             cl.playground.cli.CommandLineApp
 
       - name: Build Native Image (Windows)
@@ -105,6 +110,7 @@ jobs:
           files: |
             sqlift-linux-x64/sqlift-linux-x64
             sqlift-macos-x64/sqlift-macos-x64
+            sqlift-macos-arm64/sqlift-macos-arm64
             sqlift-windows-x64.exe/sqlift-windows-x64.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
