--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
@@ -18,10 +19,9 @@ jobs:
             output_name: sqlift-macos-x64
           - os: macos-latest
             output_name: sqlift-macos-arm64
-            extra_args: '--march=arm64'
+            extra_args: '--os-arch arm64'
           - os: windows-latest
             output_name: sqlift-windows-x64
-
 
     steps:
       - uses: actions/checkout@v3
@@ -47,7 +47,6 @@ jobs:
             --initialize-at-build-time=picocli \
             -cp target/sqlift.jar:target/lib/* \
             cl.playground.cli.CommandLineApp
-
       - name: Build Native Image (macOS)
         if: runner.os == 'macOS'
         run: |
@@ -59,20 +58,32 @@ jobs:
             -cp target/sqlift.jar:target/lib/* \
             ${{ matrix.extra_args || '' }} \
             cl.playground.cli.CommandLineApp
-
       - name: Build Native Image (Windows)
         if: runner.os == 'Windows'
-        shell: cmd
+        shell: powershell
         run: |
-          native-image --no-fallback ^
-            -H:+ReportExceptionStackTraces ^
-            -H:Name=${{ matrix.output_name }} ^
-            --initialize-at-build-time=cl.playground.cli.CommandLineApp ^
-            --initialize-at-build-time=picocli ^
-            -cp target/sqlift.jar;target/lib/* ^
+          native-image `
+            --no-fallback `
+            -H:+ReportExceptionStackTraces `
+            -H:Name=sqlift-windows-x64 `
+            --initialize-at-build-time=cl.playground.cli.CommandLineApp `
+            --initialize-at-build-time=picocli `
+            "-cp" "target/sqlift.jar;target/lib/*" `
             cl.playground.cli.CommandLineApp
+      - name: List Generated Files
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: |
+          Get-ChildItem -Path .
+      - name: Upload artifact (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/upload-artifact@v3
+        with:
+          name: sqlift-windows-x64.exe
+          path: sqlift-windows-x64.exe
 
-      - name: Upload artifact
+      - name: Upload artifact (Linux/MacOS)
+        if: runner.os != 'Windows'
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.output_name }}
@@ -84,6 +95,9 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
+
+      - name: List Downloaded Artifacts
+        run: ls -R
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
