--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,9 +9,9 @@ jobs:
   build:
     name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 30
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
@@ -60,14 +60,15 @@ jobs:
             cl.playground.cli.CommandLineApp
       - name: Build Native Image (Windows)
         if: runner.os == 'Windows'
-        shell: cmd
+        shell: powershell
         run: |
-          native-image --no-fallback ^
-            -H:+ReportExceptionStackTraces ^
-            -H:Name=sqlift-windows-x64 ^
-            --initialize-at-build-time=cl.playground.cli.CommandLineApp ^
-            --initialize-at-build-time=picocli ^
-            -cp target/sqlift.jar;target/lib/* ^
+          native-image `
+            --no-fallback `
+            -H:+ReportExceptionStackTraces `
+            -H:Name=sqlift-windows-x64 `
+            --initialize-at-build-time=cl.playground.cli.CommandLineApp `
+            --initialize-at-build-time=picocli `
+            "-cp" "target/sqlift.jar;target/lib/*" `
             cl.playground.cli.CommandLineApp
       - name: List Generated Files
         if: runner.os == 'Windows'
