--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,9 @@ jobs:
             output_name: sqlift-linux-x64
           - os: macos-latest
             output_name: sqlift-macos-x64
+          - os: macos-latest
+            arch: arm64
+            output_name: sqlift-macos-arm64
           - os: windows-latest
             output_name: sqlift-windows-x64
 
@@ -44,8 +47,9 @@ jobs:
             --initialize-at-build-time=picocli \
             -cp target/sqlift.jar:target/lib/* \
             cl.playground.cli.CommandLineApp
+
       - name: Build Native Image (macOS)
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && matrix.arch != 'arm64'
         run: |
           native-image --no-fallback \
             -H:+ReportExceptionStackTraces \
@@ -54,8 +58,9 @@ jobs:
             --initialize-at-build-time=picocli \
             -cp target/sqlift.jar:target/lib/* \
             cl.playground.cli.CommandLineApp
+
       - name: Build Native Image (M1/M2)
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && matrix.arch == 'arm64'
         run: |
           native-image --no-fallback \
             -H:+ReportExceptionStackTraces \
@@ -65,6 +70,7 @@ jobs:
             --target aarch64-darwin \
             -cp target/sqlift.jar:target/lib/* \
             cl.playground.cli.CommandLineApp
+
       - name: Build Native Image (Windows)
         if: runner.os == 'Windows'
         shell: powershell
@@ -77,11 +83,13 @@ jobs:
             --initialize-at-build-time=picocli `
             "-cp" "target/sqlift.jar;target/lib/*" `
             cl.playground.cli.CommandLineApp
+
       - name: List Generated Files
         if: runner.os == 'Windows'
         shell: powershell
         run: |
           Get-ChildItem -Path .
+
       - name: Upload artifact (Windows)
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v3
