Update3  GitHub Actions workflow to support macOS ARM64 (M1/M2) Again

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,10 +85,7 @@ jobs:
             cl.playground.cli.CommandLineApp
 
       - name: List Generated Files
-        if: runner.os == 'Windows'
-        shell: powershell
-        run: |
-          Get-ChildItem -Path .
+        run: ls -R
 
       - name: Upload artifact (Windows)
         if: runner.os == 'Windows'
