--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
           - os: macos-latest
             arch: x64
             output_name: sqlift-macos-x64
-          - os: macos-latest
+          - os: macos-14
             arch: arm64
             output_name: sqlift-macos-arm64
           - os: windows-latest
@@ -63,7 +63,7 @@ jobs:
             cl.playground.cli.CommandLineApp
 
       - name: Build Native Image (macOS arm64)
-        if: runner.os == 'macOS' && matrix.arch == 'arm64'
+        if: runner.os == 'macOS' && matrix.os == 'macos-14'
         run: |
           native-image --no-fallback \
             -H:+ReportExceptionStackTraces \
