--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14]
-        arch: [x64, arm64]
+        os: [ubuntu-latest, windows-latest, macos-14-x64, macos-14-arm64]
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
