--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,13 +11,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14-x64, macos-14-arm64]
+        os: [ubuntu-latest, windows-latest, macos-14, macos-latest]  # Usamos macos-14
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
-          - os: macos-14-x64
+          - os: macos-latest
+            arch: x64
             output_name: sqlift-macos-x64
-          - os: macos-14-arm64
+          - os: macos-14
+            arch: arm64
             output_name: sqlift-macos-arm64
           - os: windows-latest
             output_name: sqlift-windows-x64
@@ -50,7 +52,7 @@ jobs:
             cl.playground.cli.CommandLineApp
 
       - name: Build Native Image (macOS x64)
-        if: runner.os == 'macOS' && matrix.os == 'macos-14-x64'
+        if: runner.os == 'macOS' && matrix.os == 'macos-latest'
         run: |
           native-image --no-fallback \
             -H:+ReportExceptionStackTraces \
@@ -61,7 +63,7 @@ jobs:
             cl.playground.cli.CommandLineApp
 
       - name: Build Native Image (macOS arm64)
-        if: runner.os == 'macOS' && matrix.os == 'macos-14-arm64'
+        if: runner.os == 'macOS' && matrix.os == 'macos-14'
         run: |
           native-image --no-fallback \
             -H:+ReportExceptionStackTraces \
