--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14, macos-latest]  # Usamos macos-14
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
         include:
           - os: ubuntu-latest
             output_name: sqlift-linux-x64
-          - os: macos-latest
+          - os: macos-13
             arch: x64
             output_name: sqlift-macos-x64
           - os: macos-14
